@@ -23,16 +23,20 @@ if [ "$1" = "-v" ] ; then verbose=1; fi
 
 tmp=/tmp/pcretesting
 
-# Don't bother with compiler optimization; it just slows down compilation a lot
-# (and running the tests themselves is quick).
+# Don't bother with compiler optimization for most tests; it just slows down
+# compilation a lot (and running the tests themselves is quick). However, a
+# few specific tests turn optimization on, because it can provoke some compiler
+# warnings.
 
 CFLAGS="-g -O0"
 CXXFLAGS="$CFLAGS"
+ISGCC="no"
 
 # If the compiler is gcc, add a lot of warning switches.
 
 cc --version >zzz 2>/dev/null
 if [ $? -eq 0 ] && grep GCC zzz >/dev/null; then
+  ISGCC="yes"
   CFLAGS="$CFLAGS -Wall"
   CFLAGS="$CFLAGS -Wno-overlength-strings"
   CFLAGS="$CFLAGS -Wpointer-arith"         
@@ -159,25 +163,38 @@ function runtest()
   }
 
 
+# Update the total count whenever a new test is added; it is used to show
+# progess as each test is run.
+
+testtotal=42
+testcount=0
+
 # This set of tests builds PCRE and runs the tests with a variety of configure
-# options, in the current (source) directory. The first (empty) configuration
-# builds with all the default settings. As well as testing that these options
-# work, we use --disable-shared or --disable-static after the first test (which
-# builds both) to save a bit of time by building only one version of the
-# library for the subsequent tests.
+# options, in the current (source) directory. The empty configuration builds
+# with all the default settings. As well as testing that these options work, we
+# use --disable-shared or --disable-static after the default test (which builds
+# both) to save a bit of time by building only one version of the library for
+# the subsequent tests.
 
 valgrind=
 cvalgrind=
 withvalgrind=
-
-# Update the total count whenever a new test is added; it is used to show
-# progess as each test is run.
-
-testtotal=41
-testcount=0
-
-echo "Tests in the current directory"
 srcdir=.
+export srcdir
+
+# If gcc is in use, run a maximally configured test with -O2, because that can
+# throw up warnings that are not detected with -O0.
+
+if [ "$ISGCC" = "yes" ]; then
+  echo "Maximally configured test with -O2"
+  SAVECLFAGS="$CFLAGS"
+  CFLAGS="$CFLAGS -O2"
+  opts="--disable-shared --enable-unicode-properties --enable-jit --enable-pcre16 --enable-pcre32" 
+  runtest
+  CFLAGS="$SAVECFLAGS"   
+fi
+
+echo "General tests in the current directory"
 for opts in \
   "" \
   "--enable-utf8 --disable-static" \
